Fixed Spacing

--- a/TeamOrganizr/client/main.css
+++ b/TeamOrganizr/client/main.css
@@ -122,7 +122,7 @@ body {
 }
 
 .aboutSite {
-	margin: 5% 10% 5% 10%;
+	margin: 0% 5% 0% 5%;
 	text-align: center;
   position: relative;
 }
